<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="loginHolder"
            type="org.hm.com.logincomponent.LoginHolder"></variable>
    </data>
  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            >

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:inputType="text"
                android:hint="@string/hint_username"
                app:textChangedListener="@{loginHolder.onTextChanged}"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionDone"
                app:textChangedListener="@{loginHolder.onTextChanged}"
                android:maxLines="1"
                android:hint="@string/hint_password"
                android:inputType="textPassword"/>
           </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            bind:onClick="@{loginHolder.onViewClicked}"
            style="@style/ButtonDefault"
            android:text="@string/txt_login" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <TextView
                android:id="@+id/forgetPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                bind:onClick="@{loginHolder.onViewClicked}"
                style="@style/textViewThemeBlack"
                android:text="@string/txt_FPW"/>
            <TextView
                android:id="@+id/notRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                style="@style/textViewThemeBlack"
                android:layout_marginRight="5dp"
                bind:onClick="@{loginHolder.onViewClicked}"
                android:text="@string/txt_register"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center">
            <ImageView
                android:id="@+id/facebookLogin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                bind:onClick="@{loginHolder.onViewClicked}"
                android:src="@drawable/facebook"/>

            <ImageView
                android:id="@+id/googleLogin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                bind:onClick="@{loginHolder.onViewClicked}"
                android:src="@drawable/google"/>
            <ImageView
                android:id="@+id/twitterLogin"
                android:layout_width="50dp"
                android:layout_margin="5dp"
                android:layout_height="50dp"
                bind:onClick="@{loginHolder.onViewClicked}"
                android:src="@drawable/twitter"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</layout>